Fix jetty:run-war and update README.md